@@ -1,4 +1,6 @@
           CHANGES IN SOUNDGEN VERSION 1.3.3 [...date...]
+NEW FUNCTIONS:
+  * modulationSpectrum(): calculates and plots a modulation spectrum showing combined spectro-temporal modulation
 
 MINOR:
   * spectrogram(), getLoudness(): better temporal alignment of the waveform, spectrogram, and loudness contour
